调整高度后个人中心页面

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     ],
     "window": {
         "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#fff",
+        "navigationBarBackgroundColor": "#2b4b6b",
         "navigationBarTitleText": "轻c物语",
         "navigationBarTextStyle": "black"
     },
